--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name":"Anti Prod",
-    "version" : "0.0.1",
-    "manifest_version" : 1,
-    "browser_action" : {
-        "default_action" : "index.html",
-        "default_icon" : "logo.png"
-    },
-    "icons" : {
-        "128" : "logo.png"
-    },
-    "permissions" : ["activeTab"]
+  "name": "Anti-Productivity Reminder",
+  "description": "Automatically distracts you every 10 minutes with silly reminders 😜",
+  "version": "1.0",
+  "manifest_version": 3,
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": ["notifications", "alarms"],
+  "action": {
+    "default_icon": "logo.png"
+  }
 }
