--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "Anti-Productivity Reminder",
   "description": "Automatically distracts you every 10 minutes with silly reminders 🧠",
-  "version": "1.0",
+  "version": "1.1",
   "manifest_version": 3,
   "permissions": ["notifications", "alarms"],
-  "action": {
-    "default_popup": "index.html",
-    "default_icon": "logo.png"
-  },
   "background": {
-    "service_worker": "script.js"
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_icon": "logo.png",
+    "default_popup": "index.html"
   },
   "icons": {
     "128": "logo.png"
